[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lazsl"
version = "0.0.1"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["OP", "datasets", "descriptor_strings", "generate_descriptors", "load_OP", "loading_helpers", "main_OP", "utils"]

[tool.setuptools.packages.find]
include = ["myclip*", "my_datasets*", "prompts*", "features*", "descriptors*"]
